Changed: Updated fr-ca language pack Changed: Fixed Dictionary preview on IE7 being too wide for the popup window. Changed: Removed auto_logon from logon_get_cookies() function.

--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -981,7 +981,8 @@ a {
 
 .dictionary_pretty_content {
     height: 200px;
-    overflow: auto
+    overflow: auto;
+    width: 385px;
 }
 
 .dictionary_word_display {
